# PicoI2CFramework

./: CMakeLists.txt  LICENSE  bmp280.c  bmp280.h  error.h  i2c_bus.c  i2c_bus.h  i2c_bus_scan.c  i2c_core.c  i2c_core.h  i2c_dev.c  i2c_dev.h
